--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
     <section class="seller">
       <h2 class="visually-hidden"> Хиты продаж </h2>
       <ul class="seller-list">
-        <li class="seller-item"><a href="#">
+        <li class="seller-item">
+          <a href="#">
             <p class="seller-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
           </a>
           <p>
@@ -152,7 +153,8 @@
             <img src="images/icecream-one.png" width="267" height="267" alt="Мороженое">
           </p>
         </li>
-        <li class="seller-item"><a href="#">
+        <li class="seller-item">
+          <a href="#">
             <p class="seller-link">Сливочно-кофейное с кусочками шоколада</p>
           </a>
           <p>
@@ -160,7 +162,8 @@
             <img src="images/icecream-two.png" width="267" height="267" alt="Мороженое">
           </p>
         </li>
-        <li class="seller-item"><a href="#">
+        <li class="seller-item">
+          <a href="#">
             <p class="seller-link">Сливочно-клубничное с присыпкой из белого шоколада</p>
           </a>
           <p>
@@ -168,7 +171,8 @@
             <img src="images/icecream-three.png" width="267" height="267" alt="Мороженое">
           </p>
         </li>
-        <li class="seller-item"><a href="#">
+        <li class="seller-item">
+          <a href="#">
             <p class="seller-link">Сливочное крем-брюле с карамельной подливкой </p>
           </a>
           <p>
