--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="favicon.ico">
 </head>
 
@@ -18,25 +18,26 @@
                 <nav class="main-navigation-wrapper">
                     <div class="main-navigation-inner">
                         <div class="main-header-logo">
-                            <a href="index.html"><img src="images/logo.svg" width="154" height="64"
-                                    alt="CllacyShop"></a>
+                            <a href="index.html"><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
                         </div>
-                        <ul class="site-navigation site-navigation-wrapper">
+                        <ul class="site-navigation">
                             <li>
-                                <a class="site-navigation-link nav-link-current">Каталог</a>
-                                <ul class="site-navigation-inner">
-                                    <li><a href="#">Новинки</a></li>
-                                    <li><a href="catalog.html">Сливочное</a></li>
-                                    <li><a href="#">Щербеты</a></li>
-                                    <li><a href="#">Фруктовый лед</a></li>
-                                    <li><a href="#">Мелорин</a></li>
-                                </ul>
+                                <a class="site-navigation-link link-current" href="catalog.html"> <span>Каталог </span> </a>
+                                <div class="site-navigation-wrapper">
+                                    <ul class="site-navigation-inner">
+                                        <li><a href="#">Новинки</a></li>
+                                        <li><a href="catalog.html">Сливочное</a></li>
+                                        <li><a href="#">Щербеты</a></li>
+                                        <li><a href="#">Фруктовый лед</a></li>
+                                        <li><a href="#">Мелорин</a></li>
+                                    </ul>
+                                </div>
                             </li>
                             <li>
-                                <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
+                                <a class="site-navigation-link" href="blank.html"> <span class="link-undreline">Доставка и оплата</span> </a>
                             </li>
                             <li>
-                                <a class="site-navigation-link" href="blank.html">О компании</a>
+                                <a class="site-navigation-link" href="blank.html"> <span class="link-undreline">О компании</span>  </a>
                             </li>
                         </ul>
 
@@ -51,16 +52,18 @@
                                                 fill="#fff" />
                                         </svg>
                                         <span class="visually-hidden">Поиск</span></a>
-                                    <div class="search-form">
-                                        <form action="https://echo.htmlacademy.ru" method="POST">
-                                            <p>
-                                                <label>
-                                                    <span class="visually-hidden"> Поиск</span>
-                                                    <input type="text" name="search" placeholder=" Крем-брюле">
-                                                </label>
-                                            </p>
-                                            <button class="visually-hidden" type="submit">Поиск</button>
-                                        </form>
+                                    <div class="search-form-wrapper">
+                                        <div class="search-form">
+                                            <form action="https://echo.htmlacademy.ru" method="POST">
+                                                <p>
+                                                    <label>
+                                                        <span class="visually-hidden"> Поиск</span>
+                                                        <input type="text" name="search" placeholder=" Крем-брюле">
+                                                    </label>
+                                                </p>
+                                                <button class="visually-hidden" type="submit">Поиск</button>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div> <!-- search-wrapper-->
                                 <div class="login-wrapper user-navigation">
@@ -81,12 +84,12 @@
                                                     placeholder="email@example.com">
                                             </p>
                                             <p>
-                                                <label class="visually-hidden" for="login-password "> Пароль </label>
+                                                <label class="visually-hidden" for="login-password"> Пароль </label>
                                                 <input type="password" name="password" id="login-password"
                                                     placeholder="******">
                                             </p>
                                             <div>
-                                                <button class="button" type="submit">Войти</button>
+                                                <button class="button " type="submit">Войти</button>
                                                 <p>
                                                     <a href="#">Забыли пароль?</a>
                                                     <a href="#">Новая регистрация</a>
@@ -106,27 +109,30 @@
                                             <path d="M5.94 4.03L6.97 13H17.5l1.2-8.97H5.93z" fill="#E84D37" />
                                         </svg>
                                         <span> 2 товара </span></a>
-
-                                    <div class="basket-list-inner">
-                                        <ul class="basket-list">
-                                            <li>
-                                                <button class="basket-button-close" aria-label="Закрыть"></button>
-                                                <img src="images/basket-img-one.png">
-                                                <span class="basket-title-item">Пломбир с апельсиновым джемом </span>
-                                                <span class="basket-quantity">1,5 кг х <span>200 руб.</span> </span>
-                                                <span class="basket-price">300 руб.</span>
-                                            </li>
-                                            <li>
-                                                <button class="basket-button-close" aria-label="Закрыть"></button>
-                                                <img src="images/basket-img-two.png">
-                                                <span class="basket-title-item">Клубничный пломбир с присыпкой из белогошоколада</span>
-                                                <span class="basket-quantity">1,5кг х <span>300 руб.</span></span>
-                                                <span class="basket-price">450 руб.</span>
-                                            </li>
-                                        </ul>
-                                        <div>
-                                            <span class="total-price"> Итого: 750 руб.</span>
-                                            <button class="button button_basket" type="submit">Оформить заказ</button>
+                                    <div class="basket-list-wrapper">
+                                        <div class="basket-list-inner">
+                                            <ul class="basket-list">
+                                                <li>
+                                                    <button class="basket-button-close" aria-label="Закрыть"></button>
+                                                    <img src="images/basket-img-one.png" alt="Бело-желтый пломбир">
+                                                    <span class="basket-title-item">Пломбир с апельсиновым джемом
+                                                    </span>
+                                                    <span class="basket-quantity">1,5 кг х <span>200 руб.</span> </span>
+                                                    <span class="basket-price">300 руб.</span>
+                                                </li>
+                                                <li>
+                                                    <button class="basket-button-close" aria-label="Закрыть"></button>
+                                                    <img src="images/basket-img-two.png" alt="Розовое мороженное с маленькими шоклодками ввиде сердца">
+                                                    <span class="basket-title-item">Клубничный пломбир с присыпкой из
+                                                        белогошоколада</span>
+                                                    <span class="basket-quantity">1,5кг х <span>300 руб.</span></span>
+                                                    <span class="basket-price">450 руб.</span>
+                                                </li>
+                                            </ul>
+                                            <div>
+                                                <span class="total-price"> Итого: 750 руб.</span>
+                                                <a href="#" class="button button_basket">Оформить заказ</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -147,7 +153,9 @@
                             </p>
                         </div>
                     </div>
+
                 </nav>
+
             </div>
             <!--container-->
         </header>
@@ -155,6 +163,7 @@
         <main class="page-catalog container">
             <h1 class="page-title">Сливочное мороженое</h1>
             <section class="filters">
+                <h2 class="visually-hidden">Фильтр для выбора мороженного</h2>
                 <form class="filters-form" action="https://echo.htmlacademy.ru" method="GET">
                     <fieldset class="filter-assortment">
                         <legend>Сортировка: </legend>
@@ -211,9 +220,9 @@
                                 <label for="chocolate"> шоколадные</label>
                             </li>
                             <li class="filter-option filter-checkbox">
-                                <input class="visually-hidden filter-input-checkbox" id="powdered sugar" type="checkbox"
-                                    name="powdered sugar" value="сахарные присыпки" checked>
-                                <label for="powdered sugar"> сахарные присыпки</label>
+                                <input class="visually-hidden filter-input-checkbox" id="powdered_sugar" type="checkbox"
+                                    name="powdered_sugar" value="сахарные присыпки" checked>
+                                <label for="powdered_sugar"> сахарные присыпки</label>
                             </li>
                             <li class="filter-option filter-checkbox">
                                 <input class="visually-hidden filter-input-checkbox" id="fruits" type="checkbox"
@@ -356,7 +365,8 @@
                         </a>
                         <p class="seller-img">
                             <span class="price">435 <span>&#8381;</span>/кг </span>
-                            <img class="catalog-item-image" src="images/catalog/icecream-ten.png" width="267" height="267" alt="Мороженое">
+                            <img class="catalog-item-image" src="images/catalog/icecream-ten.png" width="267"
+                                height="267" alt="Мороженое">
                         </p>
                     </li>
                     <li class="seller-item">
@@ -416,7 +426,7 @@
         <footer class="footer">
             <div class="container">
                 <section class="footer-social">
-                    <h2>Как нас найти</h2>
+                    <h2 class="visually-hidden">Как нас найти</h2>
                     <ul class="social-list">
                         <li class="social-item">
                             <a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span>
@@ -479,19 +489,21 @@
 
 
                 <section class="footer-info">
-                    <h2>Дополнительная инфомрация о нас</h2>
+                    <h2 class="visually-hidden">Дополнительная инфомрация о нас</h2>
                     <svg width="15" height="13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10.8 0a4.1 4.1 0 00-3.3 1.66A4.1 4.1 0 004.2 0 4.12 4.12 0 000 4c0 3.18 7.5 9 7.5 9S15 7.22 15 4a4.12 4.12 0 00-4.2-4z" fill="#fff"/>
-                      </svg>
+                        <path
+                            d="M10.8 0a4.1 4.1 0 00-3.3 1.66A4.1 4.1 0 004.2 0 4.12 4.12 0 000 4c0 3.18 7.5 9 7.5 9S15 7.22 15 4a4.12 4.12 0 00-4.2-4z"
+                            fill="#fff" />
+                    </svg>
                     <ul class="footer-info-list">
                         <li class="footer-info-item">
                             <a href="#">Для поставщиков</a>
                         </li>
                         <li class="footer-info-item">
-                            <a href="#">О производстве</a>
+                            <a href="#">Наши документы</a>
                         </li>
                         <li class="footer-info-item">
-                            <a href="#">Наши документы</a>
+                            <a href="#">О производстве</a>
                         </li>
                         <li class="footer-info-item">
                             <a href="#">Экологические стандарты</a>
@@ -499,7 +511,8 @@
                     </ul>
                 </section>
                 <section class="footer-copyright">
-                    <p><img class="footer-logo" src="images/logo-HTMLAcademy.svg" width="108" height="31"
+                    <h2 class="visually-hidden">Копирайт</h2>
+                    <p><img class="footer-logo" src="images/logo-htmlacademy.svg" width="108" height="31"
                             alt="HTML ACADEMY">
                     </p>
                     <p class="copyright-link">Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
@@ -508,5 +521,4 @@
         </footer>
     </div>
 </body>
-
 </html>
