--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>HTML Academy: Глейси</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
@@ -20,22 +20,24 @@
             <div class="main-header-logo">
               <a><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
             </div>
-            <ul class="site-navigation site-navigation-wrapper">
+            <ul class="site-navigation">
               <li>
-                <a class="site-navigation-link" href="catalog.html"> Каталог</a>
-                <ul class="site-navigation-inner">
-                  <li><a href="#">Новинки</a></li>
-                  <li><a href="catalog.html">Сливочное</a></li>
-                  <li><a href="#">Щербеты</a></li>
-                  <li><a href="#">Фруктовый лед</a></li>
-                  <li><a href="#">Мелорин</a></li>
-                </ul>
+                <a class="site-navigation-link" href="catalog.html"> <span class="link-undreline">Каталог</span>  </a>
+                <div class="site-navigation-wrapper">
+                  <ul class="site-navigation-inner">
+                    <li><a href="#">Новинки</a></li>
+                    <li><a href="catalog.html">Сливочное</a></li>
+                    <li><a href="#">Щербеты</a></li>
+                    <li><a href="#">Фруктовый лед</a></li>
+                    <li><a href="#">Мелорин</a></li>
+                  </ul>
+                </div>
               </li>
               <li>
-                <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
+                <a class="site-navigation-link" href="blank.html"> <span class="link-undreline">Доставка и оплата</span></a>
               </li>
               <li>
-                <a class="site-navigation-link" href="blank.html">О компании</a>
+                <a class="site-navigation-link" href="blank.html"> <span class="link-undreline">О компании</span></a>
               </li>
             </ul>
 
@@ -50,16 +52,18 @@
                         fill="#fff" />
                     </svg>
                     <span class="visually-hidden">Поиск</span></a>
-                  <div class="search-form">
-                    <form action="https://echo.htmlacademy.ru" method="POST">
-                      <p>
-                        <label>
-                          <span class="visually-hidden"> Поиск</span>
-                          <input type="text" name="search" placeholder=" Крем-брюле">
-                        </label>
-                      </p>
-                      <button class="visually-hidden" type="submit">Поиск</button>
-                    </form>
+                  <div class="search-form-wrapper">
+                    <div class="search-form">
+                      <form action="https://echo.htmlacademy.ru" method="POST">
+                        <p>
+                          <label>
+                            <span class="visually-hidden"> Поиск</span>
+                            <input type="text" name="search" placeholder=" Крем-брюле">
+                          </label>
+                        </p>
+                        <button class="visually-hidden" type="submit">Поиск</button>
+                      </form>
+                    </div>
                   </div>
                 </div> <!-- search-wrapper-->
                 <div class="login-wrapper user-navigation">
@@ -77,7 +81,7 @@
                         <input type="email" name="email" id="login-login" placeholder="email@example.com">
                       </p>
                       <p>
-                        <label class="visually-hidden" for="login-password "> Пароль </label>
+                        <label class="visually-hidden" for="login-password"> Пароль </label>
                         <input type="password" name="password" id="login-password" placeholder="******">
                       </p>
                       <div>
@@ -130,11 +134,11 @@
       <h1 class="visually-hidden">Магазин мороженого </h1>
 
       <section class="slider container">
-        <div class="slider-one slide slide-current">
+        <div class="slider-one slide slide-current ">
           <h2 class="slider-title">Крем-брюле и пломбир с малиновым джемом</h2>
           <a class="button" href="#"> Давайте оба!</a>
         </div>
-        <div class="slider-two slide ">
+        <div class="slider-two slide">
           <h2 class="slider-title">Шоколадный пломбир и лимонный сорбет</h2>
           <a class="button" href="#"> Давайте оба!</a>
         </div>
@@ -143,16 +147,16 @@
           <a class="button" href="#"> Давайте оба!</a>
         </div>
         <div class="slider-control">
-          <button type="button" class="control current" aria-label="Первый слайд"></button>
-          <button type="button" class="control" aria-label="Второй слайд"></button>
-          <button type="button" class="control" aria-label="Третий слайд"></button>
+          <button type="button" class="control-one current" aria-label="Первый слайд"></button>
+          <button type="button" class="control-two" aria-label="Второй слайд"></button>
+          <button type="button" class="control-three" aria-label="Третий слайд"></button>
         </div>
       </section> <!-- slider-->
 
       <section class="special-offer-wrapper container">
         <h2 class="visually-hidden">Специальные предложения </h2>
         <div class="special-offer special-offer-rasberries">
-          <h3 class="special-offer-title">Малинка Даром!</h3>
+          <h3 class="special-offer-title">Малинка даром!</h3>
           <p class="special-offer-info">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку
             малинового варенья бесплатно.</p>
           <a class="button special-offer-button" href="#">Хочу варенье!</a>
@@ -278,14 +282,12 @@
 
       <section class="modal-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <svg width="80" height="140" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M40.15 7.01c5 0 9.92 1.3 14.26 3.78a28.45 28.45 0 0110.46 10.34 28.14 28.14 0 01.08 28.28 9.42 9.42 0 017.57 6.27 9.23 9.23 0 01-2.26 9.52 9.4 9.4 0 01-9.6 2.25 9.39 9.39 0 01-6.33-7.51c-.35.2-.72.39-1.08.58-.5 3.08-2.1 5.89-4.5 7.91a13.34 13.34 0 01-17.2 0c-2.4-2.02-4-4.83-4.5-7.91-.37-.2-.73-.38-1.08-.58a9.27 9.27 0 01-6.33 7.52 9.46 9.46 0 01-9.61-2.26 9.28 9.28 0 01-2.25-9.54 9.3 9.3 0 017.6-6.25 28.14 28.14 0 01.07-28.27c2.5-4.3 6.11-7.86 10.44-10.34a28.76 28.76 0 0114.26-3.79zm0-7.01C34.54 0 29 1.3 24 3.82 19 6.34 14.67 10 11.36 14.48a35.17 35.17 0 00-5.17 31.6 16.18 16.18 0 00-3.05 22.31 16.54 16.54 0 0022.34 4.01 20.43 20.43 0 0014.7 6.2 20.58 20.58 0 0014.72-6.2 16.54 16.54 0 0021.98-4.28 16.18 16.18 0 00-2.77-22.04 35.04 35.04 0 00-5.17-31.6A35.55 35.55 0 0056.29 3.82 35.88 35.88 0 0040.15 0z" fill="#E84D37"/>
-          <path d="M63.61 78.94c-2.78 0-5.53-.58-8.08-1.68-.37.3-.76.57-1.16.85l.54.52-3.94 3.9-1.69-1.67c-.7.27-1.4.51-2.13.72l2.38 2.37-3.93 3.9-3.96-3.9 1.57-1.55a23.62 23.62 0 01-5.97.01l1.55 1.54-3.94 3.9-3.94-3.9 2.37-2.35a22 22 0 01-2.12-.72l-1.7 1.66-3.98-3.91.5-.5c-.42-.28-.82-.56-1.22-.87a20.45 20.45 0 01-8.08 1.68h-.6c-.08.55-.03 1.1.16 1.62l20.58 57.22.09.2c.02.07.06.13.1.2l.23.4.09.13c.12.16.26.32.41.46l.1.08.4.3.18.1c.14.08.29.14.43.2h.12l.4.1h.16c.38.07.76.07 1.13 0h.17l.4-.1h.17c.15-.06.29-.13.42-.2l.19-.11c.14-.08.27-.18.4-.3l.1-.07c.15-.14.29-.3.42-.46l.08-.13c.09-.13.17-.26.24-.4l.18-.4 20.63-57.25c.19-.52.24-1.07.16-1.62-.2 0-.35.03-.6.03zM49.47 94.6l-3.94 3.9-3.89-3.9 3.93-3.91 3.9 3.9zM36.25 99.9l3.94-3.9 3.94 3.9-3.94 3.91-3.94-3.9zm7.88 10.65l-3.94 3.9-3.94-3.9 3.94-3.9 3.94 3.9zm-3.94-25.19l3.94 3.9-3.94 3.88-3.94-3.9 3.94-3.88zm-1.43 9.23l-3.94 3.9-3.94-3.9 3.94-3.91 3.94 3.9zM23.7 80.43l.39-.38 3.94 3.9-2.26 2.2-2.07-5.72zm2.79 7.84l2.93-2.9 3.93 3.9-3.89 3.88-1.8-1.79-1.17-3.08zm2.86 7.89l.11-.11 3.93 3.9-1.97 2-2.07-5.8zm4.21 11.77l-1.43-4 2.65-2.63 3.94 3.9-3.9 3.98-1.26-1.25zm3.47 9.63l-1.9-5.23 3.6 3.55-1.7 1.68zm3.08 8.58l-2.34-6.5 2.38-2.35 2.31 2.3-2.35 6.55zm3.1-8.64l-1.57-1.62 3.45-3.42-1.87 5.04zm3.48-9.44l-1.14 1.12-3.9-3.95 3.92-3.9 2.6 2.57-1.48 4.16zm2.25-6.24l-1.91-1.9L50.97 96v.05l-2.03 5.76zm3.7-10.31l-1.71 1.64-3.94-3.9 3.94-3.91 2.84 2.87-1.13 3.3zm1.9-5.37l-2.19-2.18 3.94-3.9.32.31-2.07 5.77z" fill="#E84D37"/>
-        </svg>
-        <img src="images/map.png" width="1200" height="430"
-          alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133169!2d30.315220216383803!3d59.96826598188693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1625492374665!5m2!1sru!2sru"
+          width="1200" height="430">
+        </iframe>
         <div class="modal-feedback-map">
-          <div class="modal-feedback-map-inner" >
+          <div class="modal-feedback-map-inner">
             <p>
               <span class="modal-feedback-map-info">Адрес главного офиса и офлайн-магазина:</span> <br>
               наб. Реки Карповки, <br>
@@ -293,24 +295,22 @@
             </p>
             <p>
               <span class="modal-feedback-map-info"> Для заказов по телефону:</span> <br>
-              +7 800 555-86-28  <br>
+              +7 800 555-86-28 <br>
               <span class="modal-feedback-map-info"> (с 10 до 20 ежедневно) </span>
             </p>
-            <button class="button">Форма обратной связи</button>
+            <a href="#" class="button">Форма обратной связи</a>
           </div>
         </div>
       </section>
-
-
-
     </main>
+
 
 
 
     <footer class="footer">
       <div class="container">
         <section class="footer-social">
-          <h2>Как нас найти</h2>
+          <h2 class="visually-hidden">Как нас найти</h2>
           <ul class="social-list">
             <li class="social-item">
               <a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span>
@@ -369,19 +369,21 @@
 
 
         <section class="footer-info">
-          <h2>Дополнительная инфомрация о нас</h2>
+          <h2 class="visually-hidden">Дополнительная инфомрация о нас</h2>
           <svg width="15" height="13" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M10.8 0a4.1 4.1 0 00-3.3 1.66A4.1 4.1 0 004.2 0 4.12 4.12 0 000 4c0 3.18 7.5 9 7.5 9S15 7.22 15 4a4.12 4.12 0 00-4.2-4z" fill="#fff"/>
+            <path
+              d="M10.8 0a4.1 4.1 0 00-3.3 1.66A4.1 4.1 0 004.2 0 4.12 4.12 0 000 4c0 3.18 7.5 9 7.5 9S15 7.22 15 4a4.12 4.12 0 00-4.2-4z"
+              fill="#fff" />
           </svg>
           <ul class="footer-info-list">
             <li class="footer-info-item">
               <a href="#">Для поставщиков</a>
             </li>
             <li class="footer-info-item">
-              <a href="#">О производстве</a>
+              <a href="#">Наши документы</a>
             </li>
             <li class="footer-info-item">
-              <a href="#">Наши документы</a>
+              <a href="#">О производстве</a>
             </li>
             <li class="footer-info-item">
               <a href="#">Экологические стандарты</a>
@@ -389,7 +391,8 @@
           </ul>
         </section>
         <section class="footer-copyright">
-          <p><img class="footer-logo" src="images/logo-HTMLAcademy.svg" width="108" height="31" alt="HTML ACADEMY">
+          <h2 class="visually-hidden">Копирайт</h2>
+          <p><img class="footer-logo" src="images/logo-htmlacademy.svg" width="108" height="31" alt="HTML ACADEMY">
           </p>
           <p class="copyright-link">Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
         </section>
@@ -420,6 +423,7 @@
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
